# aocc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  test.yml
include/: day1.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  dynarr.h  hashmap.h  re.h  util.h
input/: day14_ex2
src/: day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  dynarr.c  hashmap.c  main.c  re.c  util.c
test/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  hashmap.cpp  testutil.cpp  testutil.h  util.cpp
